# pyptmpl

./: .gitignore  .pre-commit-config.yaml  README.md  build.spec  init.ps1  justfile  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  github-release.yml  lint-format.yml  publish-pypi.yml  quality-security.yml  sphinx-api.yml  tests.yml  typecheck.yml
docs/: index.md  python-api.md
docs_sphinx/: conf.py
docs_sphinx/_static/: custom.css
example/: .gitignore  .yamllint  justfile  pyproject.toml
example/.justfiles/: clean.just  github_actions.just  init.just  license.just  prek.just
src/pypt/: __init__.py  __main__.py  creator.py
src/pypt/templates/: gitignore.tmpl  justfile.tmpl  pre-commit-config.yaml.tmpl  pyproject.toml.tmpl  test_smoke.py.tmpl  vscode_settings.json.tmpl  yamllint.tmpl
src/pypt/templates/github/: dependabot.yml.tmpl
src/pypt/templates/github/workflows/: lint-format.yml.tmpl  publish-pypi.yml.tmpl  quality-security.yml.tmpl  tests.yml.tmpl  typecheck.yml.tmpl
src/pypt/templates/justfiles/: clean.just.tmpl  github_actions.just.tmpl  license.just.tmpl  prek.just.tmpl
src/pyptmpl/: __init__.py  __main__.py
src/pyptmpl/creator_core/: license_ops.py  project_ops.py  templates.py
src/pyptmpl/templates/: build.spec.tmpl  gitignore.tmpl  justfile.tmpl  pre-commit-config.yaml.tmpl  pyproject.toml.tmpl  typos.toml.tmpl  zensical.toml.tmpl
src/pyptmpl/templates/docs_sphinx/: conf.py.tmpl
src/pyptmpl/templates/github/workflows/: docs.yml.tmpl  publish-pypi.yml.tmpl  sphinx-api.yml.tmpl
src/pyptmpl/tests/: test_creator_core_license_ops.py  test_creator_core_project_ops.py  test_creator_core_templates.py  test_main.py
typings/beaupy/: __init__.pyi  _beaupy.pyi  _internals.pyi
typings/beaupy/spinners/: __init__.pyi  _spinners.pyi
