[project]
name = "pyptmpl"
version = "2026.4.16.0"
description = "Bootstrap a new Python project with best-practice tooling."
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [{ name = "rbroderi", email = "rbroderi@gmail.com" }]
requires-python = ">=3.13"
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = ["beaupy>=3.11.0"]

[project.scripts]
pyptmpl = "pyptmpl.__main__:main"

[project.optional-dependencies]
dev = [
  "prek>=0.3.8",
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "pytest-sugar>=1.1.1",
  "fest-mutate>=0.1.3",
]
docs = [
  "furo>=2025.7.19",
  "sphinx>=8.2.3",
  "sphinx-autobuild>=2024.10.3",
  "zensical>=0.0.32",
]
build = ["pyinstaller>=6.16.0"]

[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"

[tool.uv_build]
include = ["src/pyptmpl/templates/**"]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
include = ["src"]
pythonVersion = "3.13"
reportUnusedCallResult = "none"
reportAny = "none"
reportExplicitAny = "none"
reportImplicitStringConcatenation = "none"
reportUnusedFunction = "none"
reportMissingParameterType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportMissingTypeStubs = "none"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint.isort]
force-single-line = true

[tool.coverage.run]
source = ["src/pyptmpl"]
omit = ["src/pyptmpl/tests/*"]

[tool.pyrefly]
permissive-ignores = true
